--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Changelog
 
+- 0.4.1 (2025-12-28)
+  * Bumps the ppad-fixed lower-bound version and tests with GHC 9.10.3.
+
 - 0.4.0 (2025-12-27)
   * Switches from variable-size 'Integer' to fixed-width words and
     constant-time primitives supplied by ppad-fixed. The implementation now
